dc.js inside polymer webcomponents working!

--- a/index.html
+++ b/index.html
@@ -430,18 +430,18 @@
 
 
                 <!-- Custom dc widget graph-->
-                <!--<div id="polymerBasicTest" class="box box-primary">-->
-                    <!--<div class="box-header">-->
-                        <!--<h3 class="box-title">Polymer basic example</h3>-->
-                    <!--</div>-->
-                    <!--&lt;!&ndash; box-body &ndash;&gt;-->
-                    <!--<div class="box-body chart-responsive">-->
-                        <!--<my-element></my-element>-->
-                        <!--<my-element></my-element>-->
-                        <!--<dc-element></dc-element>-->
-                    <!--</div>-->
-                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
-                <!--</div>-->
+                <div id="polymerBasicTest" class="box box-primary">
+                    <div class="box-header">
+                        <h3 class="box-title">Polymer basic example</h3>
+                    </div>
+                    <!-- box-body -->
+                    <div class="box-body chart-responsive">
+                        <my-element></my-element>
+                        <my-element></my-element>
+                        <dc-element></dc-element>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
                 <!-- /.Custom dc widget graph-->
 
                 <!-- Custom leaflet map widget-->
@@ -463,7 +463,7 @@
                     <!--<div class="box-header">-->
                         <!--<h3 class="box-title">CrossFilter + dc.js (table)</h3>-->
                     <!--</div>-->
-                    <!--&lt;!&ndash; box-body &ndash;&gt;-->
+                    <!-- box-body -->
                     <!--<div class="box-body chart-responsive">-->
                         <!--<button id="makeDataTable">Click to fill the data table with the filtered data</button>-->
 
@@ -486,7 +486,7 @@
                         <!--</table>-->
 
                     <!--</div>-->
-                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                    <!-- /.box-body -->
                 <!--</div>-->
                 <!-- /.Custom dc widget table-->
 
@@ -499,13 +499,13 @@
 
                         <!--<h3 class="box-title">Map</h3>-->
                     <!--</div>-->
-                    <!--&lt;!&ndash; box-body &ndash;&gt;-->
+                    <!-- box-body -->
                     <!--<div class="box-body chart-responsive">-->
                         <!--<div class="mapdiv" id="mapDiv" style="width: 100%; height: 300px;">-->
 
                         <!--</div>-->
                     <!--</div>-->
-                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                    <!-- /.box-body -->
                     <!--<style>-->
                         <!--#mapdiv {-->
                             <!--width: 350px;-->
@@ -525,13 +525,13 @@
                     <!--<div class="inf box-header">-->
                         <!--<h3 class="box-title">Results Table</h3>-->
                     <!--</div>-->
-                    <!--&lt;!&ndash; box-body &ndash;&gt;-->
+                    <!-- box-body -->
                     <!--<div class="box-body chart-responsive">-->
                         <!--<div class="box-body border-radius-none table-responsive" id="resultsDiv">-->
 
                         <!--</div>-->
                     <!--</div>-->
-                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                    <!-- /.box-body -->
                 <!--</div>-->
                 <!-- /.Custom results table widget-->
 
@@ -544,14 +544,14 @@
                         <!--<h3 class="box-title">Results</h3>-->
 
                         <!--<div class="box-tools pull-right">-->
-                            <!--&lt;!&ndash;<button class="btn bg-teal btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>&ndash;&gt;-->
-                            <!--&lt;!&ndash;<button class="btn bg-teal btn-sm" data-widget="remove"><i class="fa fa-times"></i></button>&ndash;&gt;-->
+                            <!--<button class="btn bg-teal btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>-->
+                            <!--<button class="btn bg-teal btn-sm" data-widget="remove"><i class="fa fa-times"></i></button>-->
                         <!--</div>-->
                     <!--</div>-->
                     <!--<div class="box-body border-radius-none">-->
                         <!--<div class="box-body border-radius-none" id="results"></div>-->
                     <!--</div>-->
-                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                    <!-- /.box-body -->
                 <!--</div>-->
                 <!-- /.Faceted Search Results -->
 
@@ -564,29 +564,29 @@
 
 
                 <!-- Custom dc widget donnut-->
-                <div id="crossFilterDCTest2" class="box bg-aqua-gradient">
-                    <div class="box-header">
-                        <h3 class="box-title">CrossFilter + dc.js : designation filter</h3>
-                    </div>
-                    <!-- box-body -->
-                    <div class="box-body chart-responsive">
-                        <div id="chart-ring-year"></div>
-                    </div>
-                    <!-- /.box-body -->
-                </div>
+                <!--<div id="crossFilterDCTest2" class="box bg-aqua-gradient">-->
+                    <!--<div class="box-header">-->
+                        <!--<h3 class="box-title">CrossFilter + dc.js : designation filter</h3>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; box-body &ndash;&gt;-->
+                    <!--<div class="box-body chart-responsive">-->
+                        <!--<div id="chart-ring-year"></div>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                <!--</div>-->
                 <!-- /.Custom dc widget donnut-->
 
                 <!-- Custom dc widget donnut-->
-                <div id="crossFilterDCTest4" class="box bg-aqua-gradient">
-                    <div class="box-header">
-                        <h3 class="box-title">CrossFilter + dc.js : name filter</h3>
-                    </div>
-                    <!-- box-body -->
-                    <div class="box-body chart-responsive">
-                        <div id="chart-ring-name"></div>
-                    </div>
-                    <!-- /.box-body -->
-                </div>
+                <!--<div id="crossFilterDCTest4" class="box bg-aqua-gradient">-->
+                    <!--<div class="box-header">-->
+                        <!--<h3 class="box-title">CrossFilter + dc.js : name filter</h3>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; box-body &ndash;&gt;-->
+                    <!--<div class="box-body chart-responsive">-->
+                        <!--<div id="chart-ring-name"></div>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                <!--</div>-->
                 <!-- /.Custom dc widget donnut-->
 
                 <!-- Custom Faceted Search widget-->
@@ -597,14 +597,14 @@
                         <!--<h3 class="box-title">Faceted Search</h3>-->
 
                         <!--<div class="box-tools pull-right">-->
-                            <!--&lt;!&ndash;<button class="btn bg-teal btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>&ndash;&gt;-->
-                            <!--&lt;!&ndash;<button class="btn bg-teal btn-sm" data-widget="remove"><i class="fa fa-times"></i></button>&ndash;&gt;-->
+                            <!--<button class="btn bg-teal btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>-->
+                            <!--<button class="btn bg-teal btn-sm" data-widget="remove"><i class="fa fa-times"></i></button>-->
                         <!--</div>-->
                     <!--</div>-->
                     <!--<div class="box-body border-radius-none">-->
                         <!--<div class="box-body border-radius-none" id="facets"></div>-->
                     <!--</div>-->
-                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                    <!-- /.box-body -->
                 <!--</div>-->
                 <!-- /.Custom Faceted Search widget-->
 
@@ -613,12 +613,12 @@
                     <!--<div class="box-header">-->
                         <!--<h3 class="box-title">Donut Chart</h3>-->
                     <!--</div>-->
-                    <!--&lt;!&ndash; box-body &ndash;&gt;-->
+                    <!-- box-body -->
                     <!--<div class="box-body chart-responsive">-->
                         <!--<div class="box-body border-radius-none" id="chartDiv"></div>-->
 
                     <!--</div>-->
-                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                    <!-- /.box-body -->
                 <!--</div>-->
                 <!-- /.Custom donnut chart widget-->
 
