polymer-dc integration completed charts inside polymer filter now an outsider crossfilter

--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
     <![endif]-->
 
     <!--JQuery-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!--Knockout-->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.js"></script>
+
     <!--d3.js-->
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="http://d3js.org/d3.v3.js" charset="utf-8"></script>
     <!--sparql-geojson plugin-->
     <script src="js/plugins/sparql-geojson.js" charset="utf-8"></script>
     <!--crossfilter.js-->
