--- a/polymer-elements/faceted-search/faceted-search.html
+++ b/polymer-elements/faceted-search/faceted-search.html
@@ -29,11 +29,15 @@
                             <div objectToHide="{{d[0]}}" on-click="{{buttonClick}}">{{d[0]}}</div>
                         </h4>
                     </div>
-                    <div id="{{d[0]}}" class="panel-collapse collapse in">
+                    <div id="{{d[0]}}" class="panel-collapse collapse">
                         <div class="panel-body">
+                            <ul class="nav nav-pills nav-stacked">
                                     <template repeat="{{p in d[2]}}">
-                                                <span class="label label-primary">{{p}}</span>
+                                        <li class="active">
+                                                <span class="label label-primary">{{p[0]}}<span class="badge">{{p[1]}}</span></span>
+                                        </li>
                                     </template>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -82,7 +86,7 @@
                     var val = dim.group().reduceCount().top(Infinity);
                     for (var j= 0; j < val.length; j++)
                     {
-                        values.push(val[j].key);
+                        values.push([val[j].key, val[j].value]);
                     }
 
                     var element = [
