- Theme - Dart - New Query - Footer

--- a/web/newquery.html
+++ b/web/newquery.html
@@ -214,7 +214,7 @@
 
 <script type="text/javascript">
 
-var _csvResource = "/assets/" + "SlovakianDemoSparqlQueries.csv";
+var _csvResource = "./assets/" + "SlovakianDemoSparqlQueries.csv";
 var _editorEndpoint = 'http://demos.gsi.dit.upm.es/fuseki/geo/query?query=';
 
 //configuration
