--- a/web/query.html
+++ b/web/query.html
@@ -15,6 +15,8 @@
 
     <!-- Polymer: Load Polymer platform support before any code that touches the DOM. -->
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+    <!-- Dart Support -->
+    <script src="packages/web_components/dart_support.js"></script>
 
     <!-- Bootstrap 3.3.2 -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
@@ -25,7 +27,7 @@
     <link href="http://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css"/>
     <!-- Theme style -->
     <link href="dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css"/>
-    <!-- AdminLTE Skins. Choose a skin from the css/skins 
+    <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link href="dist/css/skins/_all-skins.min.css" rel="stylesheet" type="text/css"/>
     <!-- iCheck -->
@@ -134,6 +136,7 @@
                 <p class="text-light-blue">Select a query template:</p>
                 <select class="form-control" id="querySelector"></select>
                 <br>
+                <input type="hidden" class="form-control" id="queryOption">
                 <p class="text-light-blue">Select parameters to fill the template:</p>
                 <div id="paramSelector"></div>
                 <br>
@@ -188,6 +191,9 @@
 </script>
 <!-- Bootstrap 3.3.2 JS -->
 <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+<!-- Dart -->
+<script type="application/dart" src="query.dart"></script>
+<script type="text/javascript" src="packages/browser/dart.js"></script>
 <!-- Morris.js charts -->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
 <script src="plugins/morris/morris.min.js" type="text/javascript"></script>
@@ -223,11 +229,12 @@
 <script src='//cdn.jsdelivr.net/yasr/2.4.12/yasr.bundled.min.js'></script>
 <script src='plugins/papaparse/papaparse.min.js'></script>
 
-
 <script type="text/javascript">
 
 var _csvResource = "./assets/" + "SlovakianDemoSparqlQueries.csv";
 var _editorEndpoint = 'http://demos.gsi.dit.upm.es/fuseki/geo/query?query=';
+var myEl2 = document.getElementById('querySelector');
+var parsedData = JSON.parse(localStorage.getItem("querysSaved")) || {};
 
 //configuration
 var queries = [];
@@ -253,7 +260,6 @@ var yasr = YASR(document.getElementById("yasr"), {
 });
 // end of configuration
 
-
 //This function parse the csv table to take its data.
 var googleSpreadsheetURI = "" + _csvResource;
 Papa.parse(
@@ -269,7 +275,6 @@ Papa.parse(
                         paramNo = parseInt(json.data[i][5], 10);
                     } catch (e) {
                     }
-
                     queries.push({
                         linkedResources: json.data[i][0],
                         showInDemo: json.data[i][1].trim(),
@@ -285,20 +290,18 @@ Papa.parse(
                         queries[i - 1]["param" + j] = json.data[i][7 + j];
                     }
                 }
-
                 //Here we populate the query form selector with query names
                 var queryAux;
                 for (i = 0; i < queries.length; i++) {
                     queryAux = queries[i];
                     if (queryAux.showInDemo == "yes") {
-                        $("#querySelector").append('<option value="' + i + '">' + queryAux.name + "</option>");
+                        $("#querySelector").append('<option style="width: 50%;" value="' + i + '">' + queryAux.name + "</option>");
                         //$("#queryName").append('<option value="'+i+'">'+ (i+2) +" "+query.name+"</option>");
                     }
                 }
                 $("#querySelector").change();
             }
         });
-
 $("#queryButton").click(function (e) {
     e.preventDefault();
     executeQuery();
@@ -317,7 +320,6 @@ function populateParametersSelector(id, values) {
 
 var onSelectorChange = function (selectorOrder) {
     console.log("selectorOnChange for selector with order: " + selectorOrder);
-
     // update the query template using selected parameters
     var i = $("#querySelector").val();
     var query = queries[i];
@@ -325,28 +327,21 @@ var onSelectorChange = function (selectorOrder) {
     var paramNo = query.paramNo;
     var paramNames = query.paramNames;
     var pNames = paramNames.trim().split(/\s+/);
-
     var selectedParameters = "";
-
     //Now we compose a string with the selected parameters (or the param name if not chosen yet)
     for (var i = 0; i < paramNo; i++) {
         if ($("#selector" + i).val() == "") {
             selectedParameters += "<" + pNames[i] + "> ";
             console.log("empty parameter");
-
         }
         else {
             console.log("value selected: " + document.getElementById("selector" + i).value);
             //var values = query['param'+i].split(",");
-
             selectedParameters += (document.getElementById("selector" + i).value + " ");
         }
-
     }
     console.log(selectedParameters);
     //selectedParameters = $("#paramSelector").val();
-
-
     //var paramDefinition = query.paramNames;
     queryTemplate = populateQueryWithStaticParams(queryTemplate, paramNames, selectedParameters, paramNo);
     yasqe.setValue(queryTemplate);
@@ -399,53 +394,50 @@ function executeQuery() {
 //Then looks for every parameter name in the query code and replace it with its parameter value.
 //parameterValues is a string containing all parameters values selected one after another ex:["Salamanca queso barato"]
 function populateQueryWithStaticParams(query, parameterNames, parameterValues) {
-
     var pValues = parameterValues.trim().split(/\s+/);
     var pNames = parameterNames.trim().split(/\s+/);
-
-
     for (i = 0; i < pNames.length; i++) {
         var re = new RegExp("<" + pNames[i] + ">", "g");
         query = query.replace(re, pValues[i]);
     }
     return query;
 }
-
-
 $("#querySelector").change(function () {
     // update param list
+    var j;
+    for(j = 0; j<myEl2.length; j++){
+        if(parsedData[j] != undefined ) {
+            if (myEl2.options[myEl2.selectedIndex].text == parsedData[j]["name"]) {
+                yasqe.setValue(parsedData[j].query);
+                $("#paramSelector").empty();
+                return;
+            }
+        }
+    }
     var i = $("#querySelector").val();
     var query = queries[i];
     var paramNo = query.paramNo;
     var description = query.description;
     var queryTemplate = query.queryTemplate.trim();
     var paramNames = query.paramNames;
-
-
     //put template query into the box (without replacing the parameters in the text)
     yasqe.setValue(queryTemplate);
     $("#description").text(description);
-
     //Create as many selectors as params for the selected query
     $("#paramSelector").empty();
     for (var i = 0; i < paramNo; i++) {
         var id = "selector" + i;
-        var selectorAux = $("#paramSelector").append("<select class=form-control id=" + id + ">");
-
+        var selectorAux = $("#paramSelector").append("<select style='width: 50%;' class=form-control id=" + id + ">");
+        $("#selector" + i).append('<option style="width: 50%; font-weight: bold;" value="' + paramNames.split(" ")[i] + '"><strong>' + paramNames.split(" ")[i] + "</strong></option>");
         //populate the selector with its parameter values
         populateParametersSelector("#selector" + i, query["param" + i]);
-
         //assign onChange function, we pass the index of the option chosen
         $("#selector" + i).change(function (handler) {
             //console.log("selectorOnChange for selector with id: " + handler.srcElement.attributes.id.value);
             onSelectorChange(handler.currentTarget.attributes.id.value.slice(-1));
         });
-
     }
-
 });
-
-
 
 
 
