--- a/web/newquery.html
+++ b/web/newquery.html
@@ -74,7 +74,7 @@
 <body class="skin-blue">
 <div class="wrapper">
 
-    <header class="main-header">
+    <paper-shadow class="card" z="2"><header class="main-header">
         <!-- Logo -->
         <a href="dashboard.html" class="logo"><b>Sefarad</b>-2.0</a>
         <!-- Header Navbar: style can be found in header.less -->
@@ -90,6 +90,7 @@
             </div>
         </nav>
     </header>
+    </paper-shadow>
     <!-- Left side column. contains the logo and sidebar -->
     <aside class="main-sidebar">
         <!-- sidebar: style can be found in sidebar.less -->
@@ -143,7 +144,7 @@
                 <br>
 
                 <p class="text-light-blue">Write your query:</p>
-                <paper-shadow class="card" z="3">
+                <paper-shadow class="card" z="2">
                     <div id="yasqe" style="padding-bottom: 15px"></div>
                 </paper-shadow>
                 <input type="hidden" class="form-control" id="querySelector" ng-model="query">
