- Add Parameters - Button theme - Shadow of header and CodeMirror

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -73,7 +73,6 @@
           href="bower_components/sortable-table/css/bootstrap.css" shim-shadowdom>
     <link rel="import" href="polymer-elements/faceted-search/faceted-search.html">
 
-
     <!-- ------------------------------- end/ POLYMER COMPONENTS IMPORT ZONE ------------------- -->
 
 
@@ -81,7 +80,7 @@
 <body class="skin-blue">
 <div class="wrapper">
 
-    <header class="main-header">
+    <paper-shadow class="card" z="2"><header class="main-header">
         <!-- Logo -->
         <a href="dashboard.html" class="logo"><b>Sefarad</b>-2.0</a>
         <!-- Header Navbar: style can be found in header.less -->
@@ -97,6 +96,7 @@
             </div>
         </nav>
     </header>
+    </paper-shadow>
     <!-- Left side column. contains the logo and sidebar -->
     <aside class="main-sidebar">
         <!-- sidebar: style can be found in sidebar.less -->
