--- a/web/polymer-elements/leaflet-map/leaflet-map.html
+++ b/web/polymer-elements/leaflet-map/leaflet-map.html
@@ -1,6 +1,6 @@
 
 
-<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 <script src="dc.leaflet.custom.js"></script>
 <script src="sparql-geojson.js"></script>
