--- a/web/newquery.html
+++ b/web/newquery.html
@@ -7,6 +7,8 @@
 
     <!-- Polymer: Load Polymer platform support before any code that touches the DOM. -->
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+
+    <link href="https://www.polymer-project.org/0.5/components/polymer/polymer.html" rel="import">
     <!-- Dart Support -->
     <script src="packages/web_components/dart_support.js"></script>
 
@@ -34,6 +36,7 @@
     <link href="plugins/iCheck/flat/blue.css" rel="stylesheet" type="text/css"/>
     <!-- Own Css -->
     <link href="newquery.css" rel="stylesheet" type="text/css"/>
+    <link href="common.css" rel="stylesheet" type="text/css"/>
     <!-- Morris chart -->
     <link href="plugins/morris/morris.css" rel="stylesheet" type="text/css"/>
     <!-- jvectormap -->
@@ -66,6 +69,8 @@
     <link href="polymer-elements/paper-input-decorator/paper-input-decorator.html" rel="import">
     <link href="polymer-elements/paper-button/paper-button.html" rel="import">
     <link href="polymer-elements/paper-toggle-button/paper-toggle-button.html" rel="import" >
+    <link href="polymer-elements/paper-icon-button/paper-icon-button.html" rel="import" >
+    <link href="polymer-elements/paper-action-dialog/paper-action-dialog.html" rel="import">
 
     <!-- ------------------------------- end/ POLYMER COMPONENTS IMPORT ZONE ------------------- -->
 
@@ -123,9 +128,26 @@
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
         <section class="content-header">
-            <h1>
+            <h1 horizontal layout>
                 Add Query
-                <small>New querys can be created</small>
+                <small horizontal layout style="margin-top: 5px">New querys can be created
+
+                    <template is="auto-binding">
+
+                        <section on-tap="{{toggleDialog1}}">
+
+                            <button class="fa fa-question-circle">
+                            </button>
+
+                            <paper-action-dialog class="size-position" backdrop autoCloseDisabled layered="false">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                                <paper-button affirmative autofocus>Tap me to close</paper-button>
+                            </paper-action-dialog>
+
+                        </section>
+                    </template>
+                </small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="#"> Home</a></li>
@@ -139,10 +161,10 @@
             <div id="queries">
 
                 <div center horizontal layout>
-                <paper-input-decorator style="width: 70%; margin-right: 100px" label="Name of query"
-                                       class="custom" floatingLabel>
-                    <input is="core-input" id="queryNameSelector" ng-model="name">
-                </paper-input-decorator>
+                    <paper-input-decorator style="width: 70%; margin-right: 100px" label="Name of query"
+                                           class="custom" floatingLabel>
+                        <input is="core-input" id="queryNameSelector" ng-model="name">
+                    </paper-input-decorator>
 
                     <section style="margin-right: 20px; margin-top: 15px">
                         <div>Advanced</div>
@@ -155,10 +177,27 @@
                         <core-icon icon="add"></core-icon>
                         <span style="vertical-align:middle;">add parameter</span>
                     </paper-button>
-                    <div id="paramName" style="margin-left:20px">
+                    <div id="paramName" horizontal layout style="margin-left:20px">
+                        <paper-input-decorator style="margin-top: -10px;" label="Name of parameters" class="custom">
+                            <input is="core-input" ng-keypress="saveParams($event)" ng-model="params" id="queryParams">
+                        </paper-input-decorator>
+                        <paper-icon-button style="color:#00a65a" icon="done" ng-click="saveParamsButton()" title="add icon">
+                        </paper-icon-button>
+                    </div>
+
+                </div>
+
+                <div id="paramList">
+                    <div ng-repeat="param in parameters">
+                        <div id="{{param}}">
+                            <paper-shadow class="elementList" z="1">{{param}}
+                            <button ng-click="removeParam(param)" class="fa fa-times"></button>
+                            </paper-shadow>
+                        </div>
                     </div>
                 </div>
 
+                <div class="clearfix"></div>
                 <br>
                 <p class="text-light-blue">Write your query:</p>
                 <paper-shadow class="card" z="2">
@@ -169,7 +208,7 @@
                     <paper-button raised class="colored" id="btn_save" ng-click="saveData()">Save</paper-button>
                     <paper-button raised class="colored" id="btn_clear" ng-click="clearFilters()">Clear</paper-button>
                 </div>
-                
+
             </div>
 
         </section>
@@ -236,142 +275,158 @@
 
 <script type="text/javascript">
 
-var _csvResource = "./assets/" + "SlovakianDemoSparqlQueries.csv";
-var _editorEndpoint = 'http://demos.gsi.dit.upm.es/fuseki/geo/query?query=';
+    var _csvResource = "./assets/" + "SlovakianDemoSparqlQueries.csv";
+    var _editorEndpoint = 'http://demos.gsi.dit.upm.es/fuseki/geo/query?query=';
 
-//configuration
-var queries = [];
-var yasqe = YASQE(document.getElementById("yasqe"), {
-    sparql: {
-        showQueryButton: false,
-        callbacks:{
-            success: function(data){
-                console.log("success", data);
-            }
-        },
-        createShareLink: false
-    }
-});
-// end of configuration
-
-var myEl = document.getElementById('btn_clear');
-var myEl2 = document.getElementById('querySelector');
-var myEl3 = document.getElementById('btn_save');
-
-myEl.addEventListener('click', function() {
-    var _query = yasqe.getValue();
-    myEl2.value= _query;
-    yasqe.setValue('');
-}, false);
-myEl3.addEventListener('click', function() {
-    var _query = yasqe.getValue();
-    myEl2.value= _query;
-}, false);
-
-//This function parse the csv table to take its data.
-var googleSpreadsheetURI = "" + _csvResource;
-Papa.parse(
-        googleSpreadsheetURI, {
-            download: true,
-            complete: function (json) {
-                // here populate the list from the json data
-                var paramNo;
-                for (var i = 1; i < json.data.length; i++) {
-                    //How many params?
-                    paramNo = 0;
-                    try {
-                        paramNo = parseInt(json.data[i][5], 10);
-                    } catch (e) {
-                    }
-
-                    queries.push({
-                        linkedResources: json.data[i][0],
-                        showInDemo: json.data[i][1].trim(),
-                        name: json.data[i][2],
-                        queryTemplate: json.data[i][3],
-                        description: json.data[i][4],
-                        paramNo: paramNo,
-                        paramNames: json.data[i][6]
-                    });
-                    //Here we add a variable number of parameter rows, each with its values,
-                    //in the format: param0, param1...
-                    for (var j = 0; j < paramNo; j++) {
-                        queries[i - 1]["param" + j] = json.data[i][7 + j];
-                    }
+    //configuration
+    var queries = [];
+    var yasqe = YASQE(document.getElementById("yasqe"), {
+        sparql: {
+            showQueryButton: false,
+            callbacks:{
+                success: function(data){
+                    console.log("success", data);
                 }
-
-                //Here we populate the query form selector with query names
-                var queryAux;
-                for (i = 0; i < queries.length; i++) {
-                    queryAux = queries[i];
-                    if (queryAux.showInDemo == "yes") {
-                        $("#querySelector").append('<option value="' + i + '">' + queryAux.name + "</option>");
-                        //$("#queryName").append('<option value="'+i+'">'+ (i+2) +" "+query.name+"</option>");
-                    }
-                }
-                $("#querySelector").change();
-            }
-        });
-
-//ExecuteQuery function. Still not generalized, it takes "restaurants" info from our endpoint at gsi's alpha
-function executeQuery() {
-
-    $("#querySuccess").addClass("hide");
-    $("#queryError").addClass("hide");
-
-    var _query = yasqe.getValue().replace(/(\r\n|\n|\r)/gm, "");
-    console.log(_query);
-    var temporal = _editorEndpoint + encodeURIComponent(_query);
-    var req = new XMLHttpRequest();
-    req.open("GET", temporal, true);
-    var params = encodeURIComponent(_query);
-    req.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-    req.setRequestHeader("Accept", "application/sparql-results+json");
-    req.send();
-    req.onreadystatechange = function () {
-        if (req.readyState == 4) {
-            if (req.status == 200) {
-
-                var res = eval("(" + req.responseText + ")");
-                var data = JSON.stringify(res.results.bindings);
-                console.log(data);
-                $("#querySuccess").removeClass('hide');
-                //ko.mapping.fromJSON(data, vm.viewData);
-                //updateWidgets(true);
-                yasr.setResponse({
-                    response: res,
-                    contentType: req.getResponseHeader("Content-Type")
-                });
-
-
-
-
-
-            } else {
-                $("#queryError").removeClass('hide');
-
-            }
+            },
+            createShareLink: false
         }
+    });
+    // end of configuration
+
+    var myEl = document.getElementById('btn_clear');
+    var myEl2 = document.getElementById('querySelector');
+    var myEl3 = document.getElementById('btn_save');
+
+    myEl.addEventListener('click', function() {
+        var _query = yasqe.getValue();
+        myEl2.value= _query;
+        yasqe.setValue('');
+    }, false);
+    myEl3.addEventListener('click', function() {
+        var _query = yasqe.getValue();
+        myEl2.value= _query;
+    }, false);
+
+    //This function parse the csv table to take its data.
+    var googleSpreadsheetURI = "" + _csvResource;
+    Papa.parse(
+            googleSpreadsheetURI, {
+                download: true,
+                complete: function (json) {
+                    // here populate the list from the json data
+                    var paramNo;
+                    for (var i = 1; i < json.data.length; i++) {
+                        //How many params?
+                        paramNo = 0;
+                        try {
+                            paramNo = parseInt(json.data[i][5], 10);
+                        } catch (e) {
+                        }
+
+                        queries.push({
+                            linkedResources: json.data[i][0],
+                            showInDemo: json.data[i][1].trim(),
+                            name: json.data[i][2],
+                            queryTemplate: json.data[i][3],
+                            description: json.data[i][4],
+                            paramNo: paramNo,
+                            paramNames: json.data[i][6]
+                        });
+                        //Here we add a variable number of parameter rows, each with its values,
+                        //in the format: param0, param1...
+                        for (var j = 0; j < paramNo; j++) {
+                            queries[i - 1]["param" + j] = json.data[i][7 + j];
+                        }
+                    }
+
+                    //Here we populate the query form selector with query names
+                    var queryAux;
+                    for (i = 0; i < queries.length; i++) {
+                        queryAux = queries[i];
+                        if (queryAux.showInDemo == "yes") {
+                            $("#querySelector").append('<option value="' + i + '">' + queryAux.name + "</option>");
+                            //$("#queryName").append('<option value="'+i+'">'+ (i+2) +" "+query.name+"</option>");
+                        }
+                    }
+                    $("#querySelector").change();
+                }
+            });
+
+    //ExecuteQuery function. Still not generalized, it takes "restaurants" info from our endpoint at gsi's alpha
+    function executeQuery() {
+
+        $("#querySuccess").addClass("hide");
+        $("#queryError").addClass("hide");
+
+        var _query = yasqe.getValue().replace(/(\r\n|\n|\r)/gm, "");
+        console.log(_query);
+        var temporal = _editorEndpoint + encodeURIComponent(_query);
+        var req = new XMLHttpRequest();
+        req.open("GET", temporal, true);
+        var params = encodeURIComponent(_query);
+        req.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+        req.setRequestHeader("Accept", "application/sparql-results+json");
+        req.send();
+        req.onreadystatechange = function () {
+            if (req.readyState == 4) {
+                if (req.status == 200) {
+
+                    var res = eval("(" + req.responseText + ")");
+                    var data = JSON.stringify(res.results.bindings);
+                    console.log(data);
+                    $("#querySuccess").removeClass('hide');
+                    //ko.mapping.fromJSON(data, vm.viewData);
+                    //updateWidgets(true);
+                    yasr.setResponse({
+                        response: res,
+                        contentType: req.getResponseHeader("Content-Type")
+                    });
+
+
+
+
+
+                } else {
+                    $("#queryError").removeClass('hide');
+
+                }
+            }
+        };
+        return false;
     };
-    return false;
-};
 
-var toggle = document.querySelector("paper-toggle-button");
-var paramsDiv = document.getElementById('params');
-var paramNewDiv = document.getElementById('paramName');
-var buttonAddParam = document.querySelector('#addParam');
-toggle.addEventListener('change', function () {
-    if (this.checked) {
-        paramsDiv.style.display = 'flex';
-    } else {
-        paramsDiv.style.display = 'none';
-    }
-});
+    var toggle = document.querySelector("paper-toggle-button");
+    var paramsDiv = document.getElementById('params');
+    var paramNewDiv = document.getElementById('paramName');
+    var paramList = document.getElementById('paramList');
+    var addParam = document.querySelector('#addParam');
+    toggle.addEventListener('change', function () {
+        if (this.checked) {
+            paramsDiv.style.display = 'flex';
+            paramList.style.display = 'inherit';
+        } else {
+            paramsDiv.style.display = 'none';
+            paramList.style.display = 'none';
+        }
+    });
+    addParam.addEventListener('click', function () {
+        if (paramNewDiv.style.display != 'flex') {
+            paramNewDiv.style.display = 'flex';
+        }
+    });
 
-buttonAddParam.addEventListener('click', function() {
-    if(paramNewDiv.innerHTML.trim() == "")
-        paramNewDiv.innerHTML += "<paper-input-decorator style='"+"margin-top: -10px;'"+ "label='Name of parameters'"+  "class='custom'"+"><input is='core-input' id='queryNameParams'"+ " ng-model='params'><"+"/paper-input-decorator>";
-});
+    var scope = document.querySelector('template[is=auto-binding]');
+
+    scope.toggleDialog1 = function(e) {
+        if (e.target.localName != 'button') {
+            return;
+        }
+        var d = e.target.nextElementSibling;
+        if (!d) {
+            return;
+        }
+        d.toggle();
+    };
 
 
 </script>
