--- a/web/query.html
+++ b/web/query.html
@@ -154,8 +154,10 @@
 
             <div id="queries">
                 <br>
+
                 <p class="text-light-blue">Select a query template:</p>
-                <select style="width: 50%;" class="form-control" id="querySelector"></select>
+                <select style="width: 50%;" class="form-control" id="querySelector">
+                    <option ng-repeat="query in querys">{{query['Name']}}</option></select>
                 <br>
                 <p class="text-light-blue">Select parameters to fill the template:</p>
                 <div id="paramSelector"></div>
@@ -489,22 +491,6 @@
             return;
         }
         d.toggle();
-    };
-
-    scope.transitions = [
-        'core-transition-center',
-        'core-transition-top',
-        'core-transition-bottom',
-        'core-transition-left',
-        'core-transition-right'
-    ];
-
-    scope.toggleDialog2 = function(e) {
-        if (e.target.localName != 'button') {
-            return;
-        }
-        scope.transition = e.target.getAttribute('transition');
-        document.getElementById('dialog2').toggle();
     };
 
 </script>
